styled main page images, fixed white space issue

--- a/style.css
+++ b/style.css
@@ -18,10 +18,7 @@ Author URI: findkeving.com
     font-weight: bold;
 }
 
-.container-fluid {
-    padding-left: 0px;
-    padding-right: 0px;
-}
+
 
 #nav {
     background-color: black;
@@ -30,6 +27,7 @@ Author URI: findkeving.com
 
 #logo {
     margin-top: 13px;
+    margin-left: 60px;
 }
 
 .nav-links {
@@ -99,4 +97,27 @@ Author URI: findkeving.com
     padding-left: 30px;
     padding-top: 12px;
     padding-bottom: 10px;
+}
+
+.col, [class*="col-"] {
+    padding-right: 0;
+    padding-left: 0;
+}
+
+.pad-right {
+    padding-right: 10px;
+}
+
+.pad-btm {
+    padding-bottom: 10px;
+}
+
+#cart-div {
+    background-image: url("http://v2.aftermathlab.com/wp-content/uploads/2019/06/cart-opt-3.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 300px;
+    width: 100%;
+    margin-bottom: 10px;
 }
